--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,65 @@
     <link rel="icon" href="logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
     <meta
       name="description"
-      content="Filmpire is an online database of information related to movies. Users can search for movies and learn about movies, as well as the cast of the movie. Navigating through the application is made simple with help of a AI voice chatbot. Filmpire also provides ratings of movies."
+      content="Filmpire offers a comprehensive database of movies, TV shows, actors, and more, powered by the TMDB API. Explore detailed information, reviews, trailers, and ratings to enhance your viewing experience."
     />
+    <meta
+      name="keywords"
+      content="Filmpire, movies, TV shows, film database, TMDB API, movie, trailers, ratings, actors, directors"
+    />
+    <meta
+      name="author"
+      content="Muhammed Fasil K - https://github.com/fasilofficial"
+    />
+    <link rel="canonical" href="https://filmpire-page.vercel.app/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta
+      property="og:title"
+      content="Filmpire - Discover Movies, TV Shows & More"
+    />
+    <meta
+      property="og:description"
+      content="Explore a comprehensive database of movies and TV shows, powered by the TMDB API. Find detailed information, trailers."
+    />
+    <meta property="og:image" content="./logo.png" />
+    <meta property="og:url" content="https://filmpire-page.vercel.app/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Filmpire - Discover Movies, TV Shows & More"
+    />
+    <meta
+      name="twitter:description"
+      content="Explore a comprehensive database of movies and TV shows, powered by the TMDB API. Find detailed information, trailers."
+    />
+    <meta name="twitter:image" content="./logo.png" />
+
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-    <title>Filmpire</title>
+    <title>Filmpire - Discover Movies, TV Shows & More</title>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-HF54VMRPRZ"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-HF54VMRPRZ");
+    </script>
   </head>
   <body>
     <div id="root"></div>
